uso de @Transient en la entidad